--- a/TestAppCoreData03/Base.lproj/Main.storyboard
+++ b/TestAppCoreData03/Base.lproj/Main.storyboard
@@ -1,25 +1,115 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6245" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="lKh-Xg-TuD">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Main View Controller-->
+        <scene sceneID="Rqp-DK-Zqw">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <tableViewController id="lKh-Xg-TuD" customClass="MainViewController" customModule="TestAppCoreData03" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="III-Io-wrj">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="nkz-7Z-Jar">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="nkz-7Z-Jar" id="UIV-cZ-1SD">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="lKh-Xg-TuD" id="5GN-av-cd3"/>
+                            <outlet property="delegate" destination="lKh-Xg-TuD" id="u5L-yp-pCa"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="MQn-jQ-Yyg" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="400" y="37"/>
+        </scene>
+        <!--Input View Controller-->
+        <scene sceneID="RSo-kY-iSX">
+            <objects>
+                <viewController storyboardIdentifier="InputView" id="oSe-nD-6sa" customClass="InputViewController" customModule="TestAppCoreData03" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="8tf-33-m1P"/>
+                        <viewControllerLayoutGuide type="bottom" id="XCg-4g-GZm"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="hek-St-Epd">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="i1B-AZ-xaF">
+                                <rect key="frame" x="30" y="50" width="540" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vBi-4q-APf">
+                                <rect key="frame" x="30" y="110" width="540" height="150"/>
+                                <color key="backgroundColor" red="0.89019607840000003" green="0.89019607840000003" blue="0.89019607840000003" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="150" id="Inm-NV-AV2"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pyE-sJ-FeZ">
+                                <rect key="frame" x="285" y="290" width="30" height="30"/>
+                                <state key="normal" title="保存">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="XCg-4g-GZm" firstAttribute="top" secondItem="i1B-AZ-xaF" secondAttribute="bottom" constant="30" id="8S9-yp-h3G"/>
+                            <constraint firstItem="i1B-AZ-xaF" firstAttribute="leading" secondItem="hek-St-Epd" secondAttribute="leading" constant="30" id="AOM-si-VDE"/>
+                            <constraint firstItem="XCg-4g-GZm" firstAttribute="top" secondItem="vBi-4q-APf" secondAttribute="bottom" constant="30" id="KId-ea-TPR"/>
+                            <constraint firstItem="vBi-4q-APf" firstAttribute="top" secondItem="i1B-AZ-xaF" secondAttribute="bottom" constant="30" id="NSy-3U-Jdh"/>
+                            <constraint firstAttribute="trailing" secondItem="i1B-AZ-xaF" secondAttribute="trailing" constant="30" id="YlE-Y0-a6B"/>
+                            <constraint firstItem="i1B-AZ-xaF" firstAttribute="top" secondItem="8tf-33-m1P" secondAttribute="bottom" constant="30" id="hsC-Aq-RkM"/>
+                            <constraint firstAttribute="trailing" secondItem="vBi-4q-APf" secondAttribute="trailing" constant="30" id="nbk-jf-EWc"/>
+                            <constraint firstItem="vBi-4q-APf" firstAttribute="leading" secondItem="hek-St-Epd" secondAttribute="leading" constant="30" id="sQr-ol-2UR"/>
+                            <constraint firstItem="pyE-sJ-FeZ" firstAttribute="top" secondItem="vBi-4q-APf" secondAttribute="bottom" constant="30" id="tcc-Kf-YFT"/>
+                            <constraint firstAttribute="centerX" secondItem="pyE-sJ-FeZ" secondAttribute="centerX" id="x0K-Ro-JPn"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="8S9-yp-h3G"/>
+                                <exclude reference="KId-ea-TPR"/>
+                            </mask>
+                        </variation>
+                    </view>
+                    <connections>
+                        <outlet property="ButtonSave" destination="pyE-sJ-FeZ" id="d5a-WJ-daJ"/>
+                        <outlet property="InputTitle" destination="i1B-AZ-xaF" id="D4P-uc-h6T"/>
+                        <outlet property="TextViewBody" destination="vBi-4q-APf" id="Icp-Pe-PdX"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9b4-J8-HhM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1072" y="-641"/>
+        </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="Vph-Ad-cK9">
+            <objects>
+                <viewController id="pvF-Ti-3iU" customClass="DetailViewController" customModule="TestAppCoreData03" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="2Js-dx-fqe"/>
+                        <viewControllerLayoutGuide type="bottom" id="DNm-be-ewH"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="duQ-g0-eac">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="n5f-cP-iYP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1072" y="37"/>
         </scene>
     </scenes>
 </document>
